--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-aiohttp
+aiohttp==3.9.1
+moviepy==1.0.3
+pandas==1.5.3
+pydantic==2.6.0
+python-dotenv==1.0.1
+PyVimeo==1.1.0
+Requests==2.31.0
+tqdm==4.66.1
