--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
+version: '3.8'
+
 services:
   app:
     build: .
-    env_file:
-      - .env
-    ports:
-      - 8080:8080
     volumes:
       - .:/app
+    env_file:
+      - .env
