--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   app:
     build: .
+    image: noahpsight/strapi-migrator:latest
     volumes:
       - .:/app
     env_file:
