--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.9.1
+assemblyai==0.26.0
 aiolimiter==1.1.0
 Requests==2.31.0
 moviepy==1.0.3
@@ -9,3 +10,5 @@ tqdm==4.66.1
 selenium==4.17.2
 webdriver_manager==4.0.1
 beautifulsoup4==4.12.3
+pyperclip
+cryptography
