--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 .env filter=git-crypt diff=git-crypt
+.env.* filter=git-crypt diff=git-crypt
 
 .gitattributes !filter !diff
 .gitignore !filter !diff
